activateOwner (after migration)
